<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/statusLayout"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:text="@string/basic_setting"
        android:textSize="@dimen/dp_16"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ip_address"
            android:textSize="@dimen/dp_20"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:id="@+id/ip_address"
            android:hint="这里是你的IP地址，点击更改"
            android:gravity="center_vertical|end"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/port_number"
            android:textSize="@dimen/dp_20"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:id="@+id/port_number"
            android:hint="这里是你的端口号，点击更改"
            android:gravity="center_vertical|end"
            />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/dp_20"
        android:text="@string/logout"
        android:id="@+id/logout"

        />

</LinearLayout>